--- a/src/components/GifImage/style.scss
+++ b/src/components/GifImage/style.scss
@@ -1,3 +1,5 @@
+@import "../../index.scss";
+
 .gif-video {
   &__overlay {
     position: fixed;
@@ -9,14 +11,15 @@
     align-items: center;
     justify-content: center;
     z-index: 2;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba($themeFullBlack, 0.8);
     .video__container {
-      // max-width: 300px;
-      // object-fit: cover;
-      // for mobile
       video {
         width: 100%;
         border-radius: 8px;
+      }
+      @include for-phone-only() {
+        max-width: 300px;
+        object-fit: cover;
       }
     }
     &__close {
@@ -24,7 +27,7 @@
       top: 20px;
       right: 20px;
       cursor: pointer;
-      color: #fff;
+      color: $themeWhite;
     }
   }
 }
